fix(menu): avoid extra margin

--- a/src/components/menu-surface/menu-surface.scss
+++ b/src/components/menu-surface/menu-surface.scss
@@ -12,7 +12,6 @@
 .mdc-menu-surface {
     max-height: 100%;
     position: relative;
-    margin: 0 0.25rem;
     --mdc-menu-max-width: var(
         --menu-surface-width,
         min(calc(100vw - 2rem), 20rem)
